i swear if freddy fazbear tries to sell me insurance again im gonna scream

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 					"backslash"
 				],
 				"extensions": [
-					".tsh .bsl"
+					".tsh", ".bsl"
 				],
 				"configuration": "./language-configuration.json"
 			}
