--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 				],
 				"extensions": [
 					".tsh", ".bsl",
-					"tsh", "bsl",
+					"tsh", "bsl"
 				],
 				"configuration": "./language-configuration.json"
 			}
